cluster/apps/forgejo/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forgejo-rate-limit
  namespace: forgejo
spec:
  rateLimit:
    average: 2
    burst: 10
    period: 1s
    sourceCriterion:
      ipStrategy:
        ipv6Subnet: 64
